Tag-color picker popup: fixed issue of recoloring items with the same text.
now it works with the new html structure

--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -45,7 +45,7 @@
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle JS_itemBoxTable__bodyCellInner--text">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle ">
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
@@ -61,7 +61,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">dev-team
                               </div>
                             </div>
                           </div>
@@ -101,7 +101,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">back-end
                               </div>
                             </div>
                           </div>
@@ -141,7 +141,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">282
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
                               </div>
                             </div>
                           </div>
@@ -207,7 +207,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">282
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
                               </div>
                             </div>
                           </div>
@@ -243,7 +243,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">297
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
                               </div>
                             </div>
                           </div>
@@ -279,7 +279,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">dev-team
                               </div>
                             </div>
                           </div>
@@ -315,7 +315,7 @@
                           <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">back-end
                               </div>
                             </div>
                           </div>
