Color suggestion: recoloring works from there too

--- a/_includes/blocks/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/ms-tags-colors-suggestions.html
@@ -1,15 +1,32 @@
 <div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--suggestions" style="display: none;">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
-      <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+      <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
+        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #0bda51;" data-color="#0bda51">ग़</i>
-          </div>
-        </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-            282
+
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-field__value">
+                  <div class="pmx-selector">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                    <div class="pmx-selector__item">
+                      <div class="pmx-selector__block">
+                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -20,15 +37,32 @@
       </ul>
       {% include blocks/ms-tags-colors-color-sublist.html %}
 
-      <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+      <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
+        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle JS_Color" style="color: #00bfff;" data-color="#00bfff">ग़</i>
-          </div>
-        </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-            297
+
+            <div class="pmx-field">
+              <div class="pmx-field__inner">
+                <div class="pmx-field__value">
+                  <div class="pmx-selector">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                    <div class="pmx-selector__item">
+                      <div class="pmx-selector__block">
+                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
