--- a/_includes/blocks/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/ms-tags-colors-color-sublist.html
@@ -6,8 +6,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #dcdcdc;" data-color="#dcdcdc">ग़</span>
                     </div>
@@ -22,7 +22,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Silver
@@ -34,8 +34,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
                     </div>
@@ -50,7 +50,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Deep Blue Sky
@@ -67,8 +67,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                     </div>
@@ -83,7 +83,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Malachite
@@ -100,8 +100,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                     </div>
@@ -116,7 +116,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Saffron
@@ -133,8 +133,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #b8860b;" data-color="#b8860b">ग़</span>
                     </div>
@@ -149,7 +149,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Dark Goldenrod
@@ -166,8 +166,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                     </div>
@@ -182,7 +182,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Cadmium Red
@@ -199,8 +199,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #343434;" data-color="#343434">ग़</span>
                     </div>
@@ -215,7 +215,7 @@
             <div class="pmx-field">
               <div class="pmx-field__inner">
                 <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
                         Jet
