Single select: fixed for new html, also brings prefix color with new selection

--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -34,7 +34,7 @@
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+              <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
@@ -42,8 +42,8 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #ff9b9b">ध</div>
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #ff9b9b">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Not started</div>
                           </div>
                         </div>
                       </div>
@@ -62,7 +62,7 @@
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+              <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
@@ -70,8 +70,8 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF">ध</div>
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #00BFFF">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Ongoing</div>
                           </div>
                         </div>
                       </div>
@@ -90,7 +90,7 @@
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+              <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
@@ -98,8 +98,8 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16">ध</div>
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">On hold</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #F4CA16">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">On hold</div>
                           </div>
                         </div>
                       </div>
@@ -117,7 +117,7 @@
           </ul>
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
             <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+              <div class="itemBoxTable__bodyCellInner">
 
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
@@ -125,8 +125,8 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51">ध</div>
-                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Finished</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #0BDA51">ध</div>
+                            <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Finished</div>
                           </div>
                         </div>
                       </div>
