--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -63,17 +63,17 @@
     white-space: nowrap;
     overflow: hidden;
 
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: 2px;
-      right: 0;
-      width: 30px;
-      height: 38px;
-      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 60%, rgba(255, 255, 255, 1) 100%);
-      pointer-events: none;
-      z-index: 1;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   bottom: 2px;
+    //   right: 0;
+    //   width: 30px;
+    //   height: 38px;
+    //   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .6) 60%, rgba(255, 255, 255, 1) 100%);
+    //   pointer-events: none;
+    //   z-index: 1;
+    // }
 
     .pmx-selector {
       margin: 5px 1px;
